kubernetes/apps/paperless/paperless-ai/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-ai
  namespace: paperless
  labels:
    app.kubernetes.io/name: paperless-ai
    app.kubernetes.io/instance: paperless-ai
spec:
  hostnames:
    - paperless-ai.${SECRET_DOMAIN}
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: paperless-ai
          namespace: paperless
          port: 3000
          weight: 1
